--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,58 @@
 html,
 body {
-  padding: 0;
+  height: 100vh;
+  background-color: rgb(24, 24, 24);
+  background-image: linear-gradient(
+    150deg,
+    rgb(24, 24, 24) 20%,
+    rgb(68, 68, 68) 100%
+  );
+  font-family: "Play";
+  color: #ff0000;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  font-size: 1vw;
+  z-index: -1;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+/* hides all scrollbars */
+.displayNone,
+::-webkit-scrollbar {
+  display: none !important;
 }
 
-* {
-  box-sizing: border-box;
+hr {
+  border: 0;
+  margin: 1rem 0 0 0;
+  height: 2px;
+  background-image: linear-gradient(
+    to right,
+    rgba(255, 0, 0, 0),
+    red,
+    rgba(255, 0, 0, 0)
+  );
 }
+
+/* phone */
+@media (max-width: 600px) {
+  html,
+  body {
+    background-image: linear-gradient(
+      150deg,
+      rgb(24, 24, 24) 50%,
+      rgb(68, 68, 68) 100%
+    );
+  }
+}
+/* tablet portrait */
+@media (max-width: 900px) {
+}
+/* tablet landscape */
+@media (max-width: 1200px) {
+}
+/* desktop */
+@media (max-width: 1800px) {
+}
+/* >1800px = wide screen */
